RESOLVED FIXED 19397
REGRESSION (3.1-TOT): Box-shadow renders weird when rotating a div with border radius
https://bugs.webkit.org/show_bug.cgi?id=19397
Summary REGRESSION (3.1-TOT): Box-shadow renders weird when rotating a div with borde...
Henrik Wannheden
Reported 2008-06-04 14:16:13 PDT
When applying a box-shadow to a rotated div with border radius, the shadow renders in the wrong direction (or in any case, I cant figure out how to use it). It doesn't follow the rotation, and it isn't applied as it would on an un-rotated div. Renders GREAT in Safari 3.1 though.
Attachments
Make all CSS shadows transformable (65.77 KB, patch)
2008-06-05 01:09 PDT, mitz
darin: review+
mitz
Comment 1 2008-06-05 01:09:55 PDT
Created attachment 21504 [details] Make all CSS shadows transformable
Darin Adler
Comment 2 2008-06-05 07:16:59 PDT
Comment on attachment 21504 [details] Make all CSS shadows transformable I'd like to see a comment about what the 1 pixel slop is good for.
mitz
Comment 3 2008-06-05 09:56:35 PDT
Note You need to log in before you can comment on or make changes to this bug.