WebCore/platform/graphics/cg/GraphicsContextCG.cpp
@@ -519,15 +519,25 @@ void GraphicsContext::endTransparencyLayer()
 
 void GraphicsContext::setPlatformShadow(const IntSize& size, int blur, const Color& color)
 {
-    // Extreme "blur" values can make text drawing crash or take crazy long times, so clamp
-    blur = min(blur, 1000);
-
     if (paintingDisabled())
         return;
     CGContextRef context = platformContext();
+    CGAffineTransform transform = CGContextGetCTM(context);
 
-    CGFloat width = size.width();
-    CGFloat height = size.height();
+    CGFloat A = transform.a * transform.a + transform.b * transform.b;
+    CGFloat B = transform.a * transform.c + transform.b * transform.d;
+    CGFloat C = B;
+    CGFloat D = transform.c * transform.c + transform.d * transform.d;
+
+    CGFloat smallEigenvalue = narrowPrecisionToCGFloat(sqrt(0.5 * ((A + D) - sqrt(4 * B * C + (A - D) * (A - D)))));
+
+    // Extreme "blur" values can make text drawing crash or take crazy long times, so clamp
+    CGFloat blurRadius = min(blur * smallEigenvalue, narrowPrecisionToCGFloat(1000.0));
+
+    CGSize sizeInDeviceSpace = CGSizeApplyAffineTransform(size, transform);
+
+    CGFloat width = sizeInDeviceSpace.width;
+    CGFloat height = sizeInDeviceSpace.height;
 
     // Work around <rdar://problem/5539388> by ensuring that the offsets will get truncated
     // to the desired integer.
@@ -545,12 +555,12 @@ void GraphicsContext::setPlatformShadow(const IntSize& size, int blur, const Col
     // Check for an invalid color, as this means that the color was not set for the shadow
     // and we should therefore just use the default shadow color.
     if (!color.isValid())
-        CGContextSetShadow(context, CGSizeMake(width, -height), blur); // y is flipped.
+        CGContextSetShadow(context, CGSizeMake(width, height), blurRadius);
     else {
         CGColorRef colorCG = cgColor(color);
         CGContextSetShadowWithColor(context,
-                                    CGSizeMake(width, -height), // y is flipped.
-                                    blur, 
+                                    CGSizeMake(width, height),
+                                    blurRadius, 
                                     colorCG);
         CGColorRelease(colorCG);
     }
